# dbus-python-cmake

./: CMakeLists.txt  config.h.cmake
_dbus_bindings/: dbus_bindings-internal.h  message-append.c  server.c
cmake/: FindDBUS.cmake  FindGLIB.cmake
test/: run-test.sh
